---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s07-enum-without-values.yaml\")"
---
Error: [S07]
    ╭─[ schema/s07-enum-without-values.yaml:11:15 ]
    │
 11 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `enum` but is missing the required `values` property
────╯
